# Summer25_Research

./: .gitignore  A-tree.cpp  A_tree  A_tree.cpp  A_tree.h  B-tree.c++  B-tree.cpp  CMakeLists.txt  FlipDist.cpp  Makefile  README.md  b_tree.cpp  b_tree.h  bf_bst.cpp  bf_bst.h  bfs.cpp  compare_cli.cpp  comparison.cpp  comparison.h  distance.cpp  free_edge.cpp  rotation_tree.h  serialize.cpp  setup.sh  test.cpp  tree_core.cpp  tree_generators.cpp  tree_generators.h  tree_rotate.cpp
benchmarks/: README.md  random_hard_limit_n23_35_summary.csv  random_n23_25_profile_instrumented_validation_summary.csv  random_n23_25_remaining_timeouts_t10_summary.csv  random_n23_25_seeds0_100_t2p5_m3.csv  random_n23_25_timeout_exact_switch_probe_summary.csv  random_n23_27_goal_90_99_hard_limit_summary.csv  random_n26_27_bottleneck_exact_cache_probe_summary.csv  random_n26_27_boundary_summary.csv  random_n26_27_profile_instrumented_validation_summary.csv  random_n26_27_profile_reuse_counters_summary.csv  random_n26_27_remaining_timeouts_t10_after_budget_direction_summary.csv  random_n26_27_remaining_timeouts_t10_summary.csv  random_n26_27_seeds0_100_t2_budget_direction_patch_instances.csv  random_n26_27_seeds0_100_t2_budget_direction_patch_summary.csv  random_n26_27_seeds0_100_t2_direction_patch_instances.csv  random_n26_27_seeds0_100_t2_direction_patch_summary.csv  random_n26_35_seeds0_100_t2_m3_instances.csv  random_n26_35_seeds0_100_t2_m3_summary.csv  random_n27_30_90_feasibility_summary.csv  shared_convex_flipdist_vs_astar_n22_25_seeds0_100_timeout10_summary.csv  shared_convex_local_flipdist_vs_astar_n22_30_summary.csv
docs/: README.md  architecture.md  benchmarks.md  data-artifacts.md  development.md  hard-limit-analysis.md  references.md  repository-inventory.md  reproducible-research.md  research-notes.md  terminology.md
flipdist/: algorithm.cpp  algorithm.h  branch_utils.cpp  branch_utils.h  conflicts.cpp  conflicts.h  helpers.cpp  helpers.h  memo.cpp  memo.h  memoization.cpp  memoization.h  partners.cpp  partners.h  profile.cpp  profile.h  small_bfs.cpp  small_bfs.h  testing_cli.cpp  treedist.cpp  treedist.h  treedist_top.cpp  types.h  utils.cpp  utils.h
oracle/: README.md
oracle/java/: README.md
results/: README.md
scripts/: README.md  run_bruteforce_java_parity.py  run_bruteforce_java_parity_sweep.py  run_compare.py  run_flipdist_java_parity.py  run_flipdist_java_parity_sweep.py  setup_dev.py  sweep_flipdist_limits.py  tree_ascii.py
src/: README.md
src/flipdist/: README.md  algorithm.cpp  algorithm.h  bf_bst.cpp  bf_bst.h  helpers.cpp  helpers.h  main.cpp  memoization.cpp  memoization.h  testing_cli.cpp
tests/: README.md  benchmark_slice.sh  java_parity.sh  script_help.py  smoke.sh
tools/: README.md  compare_flipdist_vs_astar.py  generate_shared_convex_instances.py  plot_flipdist_vs_astar_compare.py  plot_parity_growth.py  run_astar_java_file_parity.py  run_bruteforce_java_parity.py  run_bruteforce_java_parity_sweep.py  run_flipdist_java_parity.py  run_flipdist_java_parity_sweep.py  run_shared_convex_flipdist_vs_astar_sweep.py  sweep_flipdist_limits.py
tools/research_archive/: analyze_branchy_replay_manifest.py  analyze_plateau_profile.py  analyze_tdi_posti_profile.py  capture_branchy_seed_dumps.py  export_branchy_replay_corpus.py  export_plateau_decision_corpus.py  export_tdi_posti_corpus.py  flipdist_experiment_ledger.py  replay_branchy_cores.py  replay_plateau_decisions.py  sweep_plateau_taxonomy.py
(+19 files in other folders)
